--- a/PersonalVPN/Resources/Config/Testing.xcconfig
+++ b/PersonalVPN/Resources/Config/Testing.xcconfig
@@ -1,4 +1,4 @@
 #include "Pods/Target Support Files/Pods-PersonalVPN/Pods-PersonalVPN.testing.xcconfig"
 PRODUCT_NAME = $(inherited) β
-API_BASE_URL = test.personalvpn.app/api/
-API_KEY =  A9sgh$FPJDew4E
+API_BASE_URL = personalvpn.app/api/
+API_KEY =  6kw4)18(K7F68@A
